--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,24 @@
 @font-face {
   font-family: Avenir;
   src: url('./assets/fonts/Avenir-Heavy.ttf') format('truetype'),
-       url('./assets/fonts/Avenir-Heavy..woff') format('woff');
+       url('./assets/fonts/Avenir-Heavy.woff') format('woff');
   font-weight: 700;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  src: url('./assets/fonts/IBMPlexMono-LightItalic.woff') format('woff'),
+       url('./assets/fonts/IBMPlexMono-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  src: url('./assets/fonts/IBMPlexMono-BoldItalic.woff') format('woff'),
+       url('./assets/fonts/IBMPlexMono-BoldItalic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
 }
 
 /*
